# Vate-frontend

./: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js
src/: main.jsx
src/assets/css/: border.css  fade.css  shine.css  tailwind.css
src/components/: post.jsx  sticky-header.jsx  verify.jsx
src/layouts/main/: index.jsx
src/layouts/main/rightbar/: account.jsx  index.jsx  topic.jsx  topics.jsx
src/layouts/main/sidebar/: index.jsx  logo.jsx
src/layouts/main/sidebar/menu/: index.jsx  items.jsx
src/pages/explore/: index.jsx
src/pages/home/: flow.jsx  index.jsx
src/pages/modal/: index.jsx  slider.css  slider.jsx  slides.jsx
src/pages/modal/pages/: bio.jsx  login.jsx  post.jsx  register.jsx  vate.jsx
src/pages/modal/pages/assets/: Bio.module.css
src/pages/modal/pages/register/: dialog.jsx  index.jsx  key.jsx
src/pages/profile/: index.jsx
src/routes/: index.jsx
src/store/: index.js  topic.js
src/store/auth/: hooks.js  index.js
src/store/posts/: index.jsx
src/wasm/: wasm.js  wasm_bg.wasm
wasm/: Cargo.toml
wasm/src/: lib.rs
